# ai-dev-swarm

./: .gitignore  README.md  USER-MANUAL.md  ideas-template.md  ideas.md
.claude/: skills
.gemini/: settings.json
00-init-ideas/: README.md  assumptions-risks.md  problem-statement.md  solution-overview.md  success-metrics.md  target-users.md  tech-requirements.md
01-market-research/: SKIP.md
02-personas/: README.md  pain-points.md  persona-primary.md  persona-secondary.md  personas.md  user-stories.md
03-mvp/: README.md  mvp-scope.md  out-of-scope.md  success-criteria.md
04-tech-research/: README.md  research-1-claude-headless-results.md  research-2-realtime-streaming-results.md
05-prd/: README.md  acceptance-criteria.md  dependencies.md  error-handling-and-edge-cases.md  functional-requirements.md  non-functional-requirements.md
06-architecture/: README.md  architecture-diagram.md  (+3 more)
dev-swarm/py_scripts/: README.md  dev-swarm-mcp.py  mcp-to-skills.py  mcp_to_skills.py  pyproject.toml  use_computer.py
dev-swarm/py_scripts/webui/: README.md  __init__.py  ai_adapters.py  config.py  document_service.py  env_loader.py  main.py  models.py  pyproject.toml  run_service.py  run_state.py  skip_service.py  stage_service.py
dev-swarm/py_scripts/webui/routers/: __init__.py  agents.py  files.py  git.py  ideas.py  sprints.py  stages.py
dev-swarm/py_scripts/webui/services/: __init__.py  agent_service.py  file_service.py  git_service.py  skill_service.py  stage_service.py  workflow_service.py
dev-swarm/py_scripts/webui/workflows/: __init__.py  stage_workflow.py
(+392 files in other folders)
