[project]
name = "py-scripts"
version = "0.1.0"
description = "Python scripts for AI Dev Swarm including WebUI server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "fastapi>=0.127.1",
    "mss>=10.1.0",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pyqt6>=6.10.1",
    "python-dotenv>=1.0.0",
    "screeninfo>=0.8.1",
    "uvicorn[standard]>=0.40.0",
    "langgraph>=0.2.0",
    "gitpython>=3.1.0",
    "aiofiles>=24.1.0",
    "websockets>=14.0",
    "sse-starlette>=2.2.0",
    "pyyaml>=6.0.0",
    "markdown>=3.7",
    "pydantic-settings>=2.0.0",
]

[tool.uv.workspace]
members = [
    "scripts/*",
]
